# sphinx_trial

./: .gitignore  DEVELOPMENT.md  LICENSE  Makefile  README.md  build_docs.py  dev_setup.py  pyproject.toml  requirements.md  run_examples.py
docs/: conf.py  examples.rst  index.rst  installation.rst  sphinx_commands.md  tutorial.rst
docs/api/: math.rst  text.rst  utils.rst
example/: README.md  advanced_usage.py  basic_usage.py  math_examples.py  text_examples.py  utils_examples.py
src/sphinx_trial/: __init__.py
src/sphinx_trial/math/: __init__.py  calculator.py  geometry.py
src/sphinx_trial/text/: __init__.py  formatter.py  validator.py
src/sphinx_trial/utils/: __init__.py  config.py  logger.py
