[project]
name = "sphinx-trial"
version = "0.1.0"
description = "A sample Python library with Sphinx documentation"
readme = "README.md"
authors = [
    { name = "ko", email = "ko@to.me" }
]
requires-python = ">=3.13"
dependencies = []
keywords = ["sphinx", "documentation", "sample", "library"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/example/sphinx-trial"
Documentation = "https://sphinx-trial.readthedocs.io/"
Repository = "https://github.com/example/sphinx-trial.git"
Issues = "https://github.com/example/sphinx-trial/issues"

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.24.0"
]
dev = [
    "taskipy>=1.12.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.taskipy.tasks]
docs = "python build_docs.py"
docs-clean = "python build_docs.py clean"
docs-serve = "python build_docs.py && cd docs/_build/html && python -m http.server 8000"
examples = "python run_examples.py"
setup = "python dev_setup.py"
clean = "rm -rf build/ dist/ *.egg-info/ docs/_build/ && find . -type d -name __pycache__ -exec rm -rf {} + && find . -type f -name '*.pyc' -delete"
